[gd_scene load_steps=14 format=3 uid="uid://bfxkpfx0qgb37"]

[ext_resource type="Script" uid="uid://xm7cu7ebwvga" path="res://Scenes/UI/startgame.gd" id="1_ddswn"]
[ext_resource type="Script" uid="uid://dkahuk48vf0oi" path="res://Scripts/ui/menu_buttons.gd" id="1_gfgrl"]
[ext_resource type="Theme" uid="uid://csus3mgu2hjxc" path="res://Assets/ui/button.tres" id="2_ddswn"]
[ext_resource type="Theme" uid="uid://dr6wcdv73nca2" path="res://Assets/ui/menu.tres" id="3_1r22b"]
[ext_resource type="Script" uid="uid://oawc1qo1qaoi" path="res://Scripts/settings/settings.gd" id="4_1v4y5"]
[ext_resource type="Texture2D" uid="uid://dq8knos66o8ki" path="res://Assets/ui/textframe.png" id="5_rsl53"]
[ext_resource type="Script" uid="uid://dmbug4tme2cqn" path="res://Scripts/ui/button_show.gd" id="6_37pta"]
[ext_resource type="FontFile" uid="uid://b2d7ii78bv5cw" path="res://Assets/font/Long_Shot.ttf" id="7_qnmkp"]
[ext_resource type="AudioStream" uid="uid://csbvwt2ux40d6" path="res://Assets/ui/audio/menu click.wav" id="8_nsdyg"]
[ext_resource type="AudioStream" uid="uid://bpqpx4wtsplc0" path="res://Assets/ui/audio/menu rollover.wav" id="9_1r22b"]
[ext_resource type="PackedScene" uid="uid://cr0c38txuy1i3" path="res://Scenes/UI/loadscreen.tscn" id="11_1v4y5"]
[ext_resource type="Script" uid="uid://w2qakk6rdxfy" path="res://Scenes/UI/credits.gd" id="11_rsl53"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_m6rdh"]
texture = ExtResource("5_rsl53")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ddswn")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 189.0
offset_top = 626.0
offset_right = 867.0
offset_bottom = 919.0
script = ExtResource("1_gfgrl")

[node name="startgame" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("2_ddswn")
text = "Start game"

[node name="settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_ddswn")
text = "settings"

[node name="credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_ddswn")
text = "credits"

[node name="quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_ddswn")
text = "quit"

[node name="settings" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 991.0
offset_top = 97.0
offset_right = 1687.0
offset_bottom = 523.0
theme = ExtResource("3_1r22b")
script = ExtResource("4_1v4y5")

[node name="Container" type="MarginContainer" parent="settings"]
layout_mode = 0
offset_left = 11.0
offset_top = 10.0
offset_right = 685.0
offset_bottom = 414.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="settings/Container"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="column" type="VBoxContainer" parent="settings/Container/HBoxContainer"]
custom_minimum_size = Vector2(225, 0)
layout_mode = 2

[node name="master" type="Label" parent="settings/Container/HBoxContainer/column"]
layout_mode = 2
text = "Master volume"

[node name="master_slide" type="HSlider" parent="settings/Container/HBoxContainer/column"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="music" type="Label" parent="settings/Container/HBoxContainer/column"]
layout_mode = 2
text = "Music volume"

[node name="music_slide" type="HSlider" parent="settings/Container/HBoxContainer/column"]
texture_filter = 1
layout_mode = 2
value = 100.0

[node name="sfx" type="Label" parent="settings/Container/HBoxContainer/column"]
layout_mode = 2
text = "SFX volume"

[node name="sfx_slide" type="HSlider" parent="settings/Container/HBoxContainer/column"]
texture_filter = 1
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="column2" type="VBoxContainer" parent="settings/Container/HBoxContainer"]
custom_minimum_size = Vector2(225, 0)
layout_mode = 2

[node name="hotkeyhelp" type="HBoxContainer" parent="settings/Container/HBoxContainer/column2"]
layout_mode = 2

[node name="Label" type="Label" parent="settings/Container/HBoxContainer/column2/hotkeyhelp"]
layout_mode = 2
text = "Hotkey help"

[node name="Control" type="Control" parent="settings/Container/HBoxContainer/column2/hotkeyhelp"]
custom_minimum_size = Vector2(7, 0)
layout_mode = 2

[node name="button_show" type="Panel" parent="settings/Container/HBoxContainer/column2/hotkeyhelp"]
custom_minimum_size = Vector2(50, 35)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_m6rdh")
script = ExtResource("6_37pta")

[node name="input_name_lbl" type="Label" parent="settings/Container/HBoxContainer/column2/hotkeyhelp/button_show"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 41.0
offset_bottom = 48.0
theme_override_fonts/font = ExtResource("7_qnmkp")
theme_override_font_sizes/font_size = 40
text = "h"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control2" type="Control" parent="settings/Container/HBoxContainer/column2/hotkeyhelp"]
custom_minimum_size = Vector2(7, 0)
layout_mode = 2

[node name="hotkeyhelpcheck" type="CheckBox" parent="settings/Container/HBoxContainer/column2/hotkeyhelp"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 3
button_pressed = true
action_mode = 0

[node name="Control" type="Control" parent="settings/Container/HBoxContainer/column2"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="sensitive" type="Label" parent="settings/Container/HBoxContainer/column2"]
layout_mode = 2
text = "Camera rotation"

[node name="sensitive_slide" type="HSlider" parent="settings/Container/HBoxContainer/column2"]
texture_filter = 1
layout_mode = 2
value = 50.0

[node name="sensitive_value" type="Label" parent="settings/Container/HBoxContainer/column2"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "11.0"
horizontal_alignment = 2
clip_text = true

[node name="close_button" type="Button" parent="settings"]
layout_mode = 0
offset_left = 551.0
offset_top = 329.0
offset_right = 670.0
offset_bottom = 403.0
text = "Close"

[node name="hover" type="AudioStreamPlayer" parent="settings"]
stream = ExtResource("9_1r22b")
volume_db = -10.0
pitch_scale = 0.78
bus = &"SFX"

[node name="click" type="AudioStreamPlayer" parent="settings"]
stream = ExtResource("8_nsdyg")
bus = &"SFX"

[node name="roll" type="AudioStreamPlayer" parent="settings"]
stream = ExtResource("8_nsdyg")
volume_db = -10.0
pitch_scale = 2.0
bus = &"SFX"

[node name="credits" type="Panel" parent="."]
visible = false
offset_left = 991.0
offset_top = 551.0
offset_right = 1687.0
offset_bottom = 977.0
theme = ExtResource("3_1r22b")
script = ExtResource("11_rsl53")

[node name="Container" type="MarginContainer" parent="credits"]
layout_mode = 0
offset_left = 11.0
offset_top = 10.0
offset_right = 685.0
offset_bottom = 414.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="credits/Container"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="column" type="VBoxContainer" parent="credits/Container/HBoxContainer"]
custom_minimum_size = Vector2(225, 0)
layout_mode = 2

[node name="column2" type="VBoxContainer" parent="credits/Container/HBoxContainer"]
custom_minimum_size = Vector2(225, 0)
layout_mode = 2

[node name="close_button" type="Button" parent="credits"]
layout_mode = 0
offset_left = 551.0
offset_top = 329.0
offset_right = 670.0
offset_bottom = 403.0
text = "Close"

[node name="hover" type="AudioStreamPlayer" parent="credits"]
stream = ExtResource("9_1r22b")
volume_db = -10.0
pitch_scale = 0.78
bus = &"SFX"

[node name="click" type="AudioStreamPlayer" parent="credits"]
stream = ExtResource("8_nsdyg")
bus = &"SFX"

[node name="roll" type="AudioStreamPlayer" parent="credits"]
stream = ExtResource("8_nsdyg")
volume_db = -10.0
pitch_scale = 2.0
bus = &"SFX"

[node name="Control" parent="." instance=ExtResource("11_1v4y5")]
visible = false
layout_mode = 1

[connection signal="mouse_entered" from="VBoxContainer/startgame" to="VBoxContainer" method="_on_startgame_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/startgame" to="VBoxContainer" method="_on_startgame_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/settings" to="VBoxContainer" method="_on_settings_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/settings" to="VBoxContainer" method="_on_settings_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/credits" to="VBoxContainer" method="_on_credits_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/credits" to="VBoxContainer" method="_on_credits_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/quit" to="VBoxContainer" method="_on_quit_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/quit" to="VBoxContainer" method="_on_quit_pressed"]
[connection signal="drag_ended" from="settings/Container/HBoxContainer/column/master_slide" to="settings" method="_on_master_slide_drag_ended"]
[connection signal="value_changed" from="settings/Container/HBoxContainer/column/master_slide" to="settings" method="_on_master_slide_value_changed"]
[connection signal="drag_ended" from="settings/Container/HBoxContainer/column/music_slide" to="settings" method="_on_music_slide_drag_ended"]
[connection signal="value_changed" from="settings/Container/HBoxContainer/column/music_slide" to="settings" method="_on_music_slide_value_changed"]
[connection signal="drag_ended" from="settings/Container/HBoxContainer/column/sfx_slide" to="settings" method="_on_sfx_slide_drag_ended"]
[connection signal="value_changed" from="settings/Container/HBoxContainer/column/sfx_slide" to="settings" method="_on_sfx_slide_value_changed"]
[connection signal="toggled" from="settings/Container/HBoxContainer/column2/hotkeyhelp/hotkeyhelpcheck" to="settings" method="_on_hotkeyhelpcheck_toggled"]
[connection signal="value_changed" from="settings/Container/HBoxContainer/column2/sensitive_slide" to="settings" method="_on_sensitive_slide_value_changed"]
[connection signal="pressed" from="settings/close_button" to="settings" method="_on_close_button_pressed"]
[connection signal="pressed" from="credits/close_button" to="credits" method="_on_close_button_pressed"]
